# QtCloudMusic

./: .gitignore  CMakeLists.txt  README.md  qt5.natvis.xml
inc/: application.h  mainwindows.h
inc/widget/: navbar.h  titlebar.h
qrc/: img.qrc  qss.qrc
qrc/dark/: img.qrc  qss.qrc
qrc/light/: qss.qrc
qss/: navbar.qss  qsstest.qss  titlebar.qss
src/: application.cpp  mainwindows.cpp
src/widget/: navbar.cpp  titlebar.cpp
